--- a/NHIS-CloneProject/header.css
+++ b/NHIS-CloneProject/header.css
@@ -1,75 +1,106 @@
 header {
-    width: 100vw;
-    height: 203px;
-    background-color: white;
+  width: 100vw;
+  height: 203px;
+  background-color: white;
 }
 
 .header__contents {
-    width: 100%;
-    max-width: 1240px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 1240px;
+  margin: 0 auto;
 
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
 }
 
 .header__inner {
-    position: relative;
-    background-color: #edf1f5;
-    padding: 10px;
-    margin-bottom: 10px;
+  position: relative;
+  background-color: #edf1f5;
+  padding: 10px;
+  margin-bottom: 10px;
+  position: relative;
 }
 
-.header__inner-text {
-    max-width: 1240px;
-    margin: 0 auto;
+.header__inner > .header__inner-text {
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.header__inner-text::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  margin-top: -8px;
+  width: 24px;
+  height: 16px;
+
+  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/icon/top_ban_ico_flag.png");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: left center;
 }
 
 .header__site-controls {
-    display: flex;
-    justify-content: flex-end;
-    gap: 30px;
- }
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
 
- .header__site-controls > li::after {
-    content: '|';
-    color: #d8d8d8;
-    margin-left: 15px;
- }
+  font-size: 14px;
+}
 
- .header__site-controls > li:last-child::after {
-    content: '';
-    margin-left: 0;
- }
+.header__site-controls > li > a {
+  background-color: transparent;
+  padding: 0 3px;
+  border-radius: 6px;
+}
 
- .header__topbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
- }
+.header__site-controls > li > a:hover {
+  cursor: pointer;
+  background-color: #d8d8d8;
+}
 
- .header__topbar > .user-controls {
-    display: flex;
-    gap: 50px;
- }
+.header__site-controls > li::after {
+  content: "|";
+  color: #d8d8d8;
+  margin-left: 10px;
+}
 
- .header__menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
- }
+.header__site-controls > li:last-child::after {
+  content: "";
+  margin-left: 0;
+}
 
- .header__menu > .menu-list {
-    display: flex;
-    gap: 30px;
- }
+.header__topbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
 
- .header__line {
-    border: 1px solid #edf1f5;
-    margin-top: -35px;
- }
- 
+.header__topbar > .user-controls {
+  display: flex;
+  gap: 50px;
 
+  font-weight: bold;
+}
 
+.header__menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  font-weight: bold;
+}
+
+.header__menu > .menu-list {
+  display: flex;
+  gap: 30px;
+}
+
+.header__line {
+  border: 1px solid #edf1f5;
+  margin-top: -35px;
+}
