--- a/NHIS-CloneProject/footer.css
+++ b/NHIS-CloneProject/footer.css
@@ -1,36 +1,144 @@
 footer {
   width: 100vw;
-  height: 460px;
+  position: absolute;
+
+  padding-top: 150px;
+  font-weight: bold;
 }
 
 .footer__inner {
   width: 100%;
-  max-width: 1240px;
+  height: 54px;
   margin: 0 auto;
   display: flex;
+
+  border: 1px solid #c6c6c6;
+}
+
+.footer__inner-contents {
+  width: 100%;
+  max-width: 1240px;
+  margin: 0 auto;
+
+  display: flex;
+}
+
+.footer__inner-contents > button {
+  border-radius: 0;
+  border: none;
+  border-left: 1px solid #c6c6c6;
+  padding: 0 24px;
+  background-color: transparent;
+  font-size: 15px;
+}
+
+.footer__inner-contents > .border-right {
+  border-right: 1px solid #c6c6c6;
 }
 
 .footer__main {
   width: 100%;
-  height: 320px;
   background-color: #f0f0f0;
 }
 
-.footer__contents {
+.footer__main-contents {
   width: 100%;
   max-width: 1240px;
   margin: 0 auto;
+  padding: 32px;
 
   display: flex;
   flex-direction: column;
 }
 
-.snslink > li > .naver {
-  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/common/foot_ico_sns_blog.png");
+.footer__main-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+
+  border-bottom: 1px solid #c6c6c6;
+  padding-bottom: 30px;
+}
+
+.footer__main-info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.footer__main-snslink {
+  display: flex;
+  gap: 10px;
+  margin-top: 25px;
+}
+
+.footer__main-snslink > li > a {
   background-color: white;
   display: block;
   width: 40px;
   height: 40px;
   border: 1px solid #e4e4e4;
   border-radius: 999px;
+}
+
+.footer__main-snslink > li > .naver {
+  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/common/foot_ico_sns_blog.png");
+}
+
+.footer__main-snslink > li > .facebook {
+  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/common/foot_ico_sns_facebook.png");
+}
+
+.footer__main-snslink > li > .kakao {
+  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/common/foot_ico_sns_kakao.png");
+}
+
+.footer__main-snslink > li > .youtube {
+  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/common/foot_ico_sns_youtube.png");
+}
+
+.footer__main-snslink > li > .instagram {
+  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/common/foot_ico_sns_Instagram.png");
+}
+
+.policy {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  padding: 30px 0;
+}
+
+.red {
+  color: red;
+}
+
+.marklist {
+  display: flex;
+  gap: 15px;
+}
+
+.marklist > a {
+  height: 41px;
+  background-repeat: no-repeat;
+}
+
+.mark01 {
+  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/common/mark_01.png");
+  width: 63px;
+}
+
+.mark02 {
+  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/common/mark_02.png");
+  width: 43px;
+}
+
+.mark03 {
+  background-image: url("https://www.nhis.or.kr/_res/nhis/_share/img/icon/mark02-img05.png");
+  width: 57px;
+}
+
+.mark04 {
+  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/common/mark_04.png");
+  width: 60px;
 }
