--- a/NHIS-CloneProject/about.css
+++ b/NHIS-CloneProject/about.css
@@ -31,7 +31,7 @@
   object-fit: cover;
 
   background-color: #c6c6c6;
-  background-image: url("https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/main/img_about.png");
+  background-image: url("img/img_about.png");
   background-repeat: no-repeat;
   background-position: top center;
   background-size: 100% auto;
@@ -61,6 +61,7 @@
 .about__contents > figure > figcaption > a > p {
   font-size: 15px;
   color: gray;
+  line-height: 1.5;
 }
 
 .about__contents > figure > figcaption > a > span {
@@ -92,6 +93,7 @@
 
 .about__contents > .text__cardlist > .textcard > p {
   font-size: 15px;
+  line-height: 1.2;
   height: 90px;
 }
 
@@ -210,4 +212,83 @@
 
 .about__contents > .list-slide > .slide > .album > img {
   border-radius: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .about__contents {
+    max-width: 680px;
+  }
+  .about__contents > h3 {
+    font-size: 25px;
+  }
+  .profile__img {
+    width: 50%;
+    background-size: 200% auto;
+  }
+
+  .about__contents > .text__cardlist > .textcard {
+    padding: 23px 15px;
+  }
+
+  .about__contents > .text__cardlist > .textcard > h6 {
+    font-size: 15x;
+  }
+
+  .about__contents > .text__cardlist > .textcard > p {
+    font-size: 12px;
+    height: 60px;
+  }
+
+  .about__contents > .text__cardlist > .textcard > span {
+    font-size: 12px;
+  }
+  .about__contents > .list-slide {
+    display: unset;
+  }
+  .about__contents > .list-slide > .img__cardlist {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 0;
+    margin-bottom: 40px;
+  }
+  .about__contents
+    > .list-slide
+    > .img__cardlist
+    > .imgcard
+    > a
+    > .imgcard-text {
+    padding: 20px;
+    gap: 15px;
+  }
+
+  .about__contents
+    > .list-slide
+    > .img__cardlist
+    > .imgcard
+    > a
+    > .imgcard-text
+    > h6 {
+    height: 35px;
+  }
+
+  .about__contents
+    > .list-slide
+    > .img__cardlist
+    > .imgcard
+    > a
+    > .imgcard-text
+    > span {
+    font-size: 13px;
+  }
+  .about__contents > .list-slide {
+    display: unset;
+  }
+
+  .about__contents > .list-slide > .slide > .album {
+    display: flex;
+    justify-content: center;
+  }
+  .about__contents > .list-slide > .slide > .album > img {
+    width: 70%;
+  }
 }
